--- a/styles/main.css
+++ b/styles/main.css
@@ -16,17 +16,19 @@ p {
 }
 
 li {
-  list-style-type: none;
+  list-style-type: none; 
 }
 
-
-li img {
-  display: inline-block;
-  margin-bottom: 2px;
-}
-
-li p {
+ul {
+  padding-inline-start: 0px;
   display: flex;
+  flex-flow: row;
+  justify-content: space-evenly;
+}
+
+img {
+  width: 200px;
+  height: auto;
 }
 
 nav li {
@@ -34,11 +36,7 @@ nav li {
   padding: 1rem;
 }
 
-nav ul {
-  display: flex;
-}
 
-/* -----GRID DECLARATIONS----- */
 .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -47,13 +45,8 @@ nav ul {
   justify-content: space-around;
   align-items: center;
   border: 1.5em solid pink;
+  border-bottom: none;
 }
-
-
-/* nav, footer {
-  grid-column: 1 / 3;
-} */
-/* -----end GRID DECLARATIONS----- */
 
 .container>section {
   grid-column: 1 / span 3;
@@ -64,15 +57,10 @@ nav ul {
   margin: 50px 30px;
 }
 
-body {
-  width: 100%;
-}
-
-ul {
-  padding-inline-start: 0px;
-  display: flex;
-  flex-flow: row;
-  justify-content: space-evenly;
+nav {
+position: -webkit-sticky;
+position: sticky;
+top: 20px;
 }
 
 .container>section.welcome {
@@ -94,8 +82,7 @@ ul {
   float: left;
 }
 
-
-a.button {
+.button {
   /* border: solid 2px pink; */
   border-radius: 2px;
   background-color: pink;
@@ -105,7 +92,7 @@ a.button {
   margin: 2rem;
 }
 
- a:hover {
+a:hover {
   background-color: rgb(255, 174, 187);
 }
 
@@ -126,8 +113,6 @@ a.button {
   border-radius: 100%;
   border: 6px solid pink;
   margin: 1rem;
-  width: 250px;
-  height: auto;
 }
 
 .testimonial {
@@ -138,23 +123,23 @@ a.button {
   align-self: flex-end;
   padding-right: 3em;
   font-style: italic;
-  /* font-family: 'Noto Serif', serif; */
+  font-family: 'Noto Serif', serif;
   font-size: 1rem;
   color: rgb(0, 60, 255);
 }
 
 strong {
-  color: rgb(0, 60, 255);
+  color: rgb(255, 174, 187);
 }
 
 blockquote {
   font-style: italic;
-  /* font-family: 'Noto Serif', serif; */
+  font-family: 'Noto Serif', serif;
   font-size: 1.25em;
   line-height: 175%;  
 }
 
-section.sponsors {
+.sponsors {
   margin: 0 10em;
 }
 
@@ -172,10 +157,11 @@ section.sponsors {
 }
 
 footer {
+  background-color: blue;
   grid-column: 1 / span 3;
   display: flex;
   flex-direction: row;
-  padding: 1rem;
+  color: white;
 }
 
 footer div {
