--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@ body {
 nav ul {
   display: grid;
   grid-template-columns: 70% 15% 15%;
+  position: fixed;
 }
 
 .welcome {
@@ -14,7 +15,7 @@ nav ul {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 10px
+  margin: 30px
 }
 
 .welcome h1, sub {
@@ -27,19 +28,25 @@ nav ul {
   font-size: 1em;
   height: 5vh;
   text-decoration: none;
-  color: #333;
+  background-color: black;
+  border-radius: 20px;
+  color: white;
   align-items: center;
   justify-content: center;
-  margin 5% 5% 5% 5% 
 }
 
 .welcome div {
-  border: 1px solid black;
+  border: 2px solid transparent;
   border-radius: 20px;
+  width: 15%
 }
 
-button:hover {
-  color: grey
+.button:hover {
+  background-color: greenyellow;
+  color: black;
+  border: 2px solid transparent;
+  border-radius: 20px;
+
 }
 
 .quote {
