--- a/styles/style.css
+++ b/styles/style.css
@@ -176,8 +176,17 @@ h2{
 }
 
 .footer{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  display: flex;
+  max-width: 700px;
+  justify-content: space-around;
+  border-bottom: none;
+  margin-top: 20px;
 }
 
-
+.footer ul{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 0px;
+  list-style-type: none;
+}
