--- a/styles/style.css
+++ b/styles/style.css
@@ -1,21 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro', 'https://fonts.googleapis.com/css?family=Cardo');
 
-
-.navigation_bar {
-  display: grid;
-  grid-template-columns: 1fr 5fr 1fr;
-  grid-template-rows: 100px;
+* {
+  font-family: 'Source Sans Pro', sans-serif;
+  margin-right: 4px;
+  margin-left: 4px;
 }
 
-.navigation_bar > li {
-  font-weight: bold;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.navigation_bar li:nth-child(2) {
-  justify-content: flex-end;
-  padding-right: 17%;
+ul {
+  list-style-type: none;
+  padding: 0;
 }
 
 main {
@@ -25,22 +18,41 @@ main {
   margin: 5px;
 }
 
-ul {
-  list-style-type: none;
-  padding: 0;
+.borders {
+  border-bottom: 3px solid lightgray;
 }
 
-.title_and_tagline {
+.navigation_bar {
+  display: grid;
+  grid-template-columns: 1fr 5fr 1fr;
+  grid-template-rows: 100px;
+  
+}
+
+.navigation_bar > li {
+  font-weight: bold;
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#try {
+  justify-content: flex-end;
+  padding-right: 17%;
+}
+
+#title_and_tagline {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("https://external-preview.redd.it/CEYbFD42d05IHI648ZttpPwozZ5QnTnDpRWsmJhJyag.jpg?auto=webp&s=91c9209d8dbc31bffe7e5fed3e6df5a31692317f");
+  /* opacity: 0.5%; */
+  display: flex;
+  color: white;
   height: 350px;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  /* background: navy; */
-  border-bottom: 3px solid lightgray;
 }
 
-.title_and_tagline > h1 {
+#title_and_tagline > h1 {
   font-size: 3.5em;
   margin-top: -20px;
 }
@@ -58,21 +70,18 @@ sub {
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  color: black;
+  color: white;
   font-size: 1.3em;
 }
 
 #button:hover {
-  background: lightgrey;
-}
-
-.lorem_quote {
-  border-bottom: 3px solid lightgray;
+  background: rgb(228, 52, 21);
 }
 
 blockquote, blockquote + p {
   text-align: left;
-  font-size: 2em;
+  font-size: 1.5em;
+  font-family: "Cardo", san-serif;
   font-style: italic;
   margin: 10%;
 }
@@ -90,39 +99,39 @@ blockquote + p::before {
   content: "-- "
 }
 
-.why_section {
+#why_section {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  border-bottom: 3px solid lightgray;
 }
 
-.why_section > h2 {
+#why_section h2 {
   text-align: center;
   margin-top: 50px;
 }
 
-#why_list {
+#why_section ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
 
-#why_list > li {
+#why_section li {
   width: 350px; 
   margin-bottom: 40px;
 }
 
-#why_list > li > img {
+#why_section img {
   float: left;
   margin: 10px;
 }
 
 .team_profiles {
-  background: lightpink;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .profile_photos {
@@ -145,15 +154,18 @@ blockquote + p::before {
 }
 
 
-.sponsors {
-  background: green;
+#sponsors {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 40px;
+}
+
+#sponsors img {
+  opacity: 0.6;
 }
 
 .sponsor_images {
-  background: navy;
   display: flex;
   flex-flow: row wrap;
   align-items: center;
@@ -162,7 +174,6 @@ blockquote + p::before {
 }
 
 .sponsor_images > li {
-  background: hotpink;
   margin: 10px;
 }
 
@@ -170,7 +181,6 @@ blockquote + p::before {
   display: flex;
   flex-wrap: wrap;
   align-items: space-evenly;
-  /* grid-template-columns: 1fr 1fr 3fr; */
   margin: 40px 0px 70px 125px;
 }
 
