--- a/styles.css
+++ b/styles.css
@@ -48,35 +48,30 @@
     padding: 1em;
   } 
 
+li {
+    list-style-type: none;
+}
+
 .top-nav-bar {
     grid-column: 1 / span 4;
 }
-  
-.navigation {
-    /* background-color: tomato; */
-    display: flex;
+
+nav ul {
     list-style-type: none;
-    justify-content: flex-end;
-    padding: 1em;
-}
-  
-.navigation ul {
-    /* list-style-type: none; */
-    /* margin: 16px; */
-    display: flex;
-    padding-right: 5%;
-    padding-top: 2%
+    padding: 3%;
+    display: grid;
+    grid-template-columns: 60% 20% 20%;
+    font-weight: bold;
 }
 
-.navigation ul > li:first-child { 
-    background-color: tomato;
-    
-
-    /* font-style: italic; */
-    /* font-size: 28pt; */
-    /* font-weight: bolder; */
+nav li {
+    padding-left: 5rem;
+    padding-right: 5rem;
 }
 
+nav li:nth-child(2), nav li:nth-child(3) {
+    text-align: center
+}
 
 .title-section {
     grid-row: 2 / 3;
@@ -95,7 +90,26 @@
 .title h1 {
     margin: 0;
 }
-  
+
+.title p {
+    font-weight: bold;
+}
+
+.button {
+    background-color: rgb(226, 225, 242);
+    border-radius: 15px;
+    color: black;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.button:hover {
+    background-color: rgb(208, 206, 237);
+}
+
 .top-quote-block {
     grid-row: 3 / 4;
     grid-column: 1 / span 4;
@@ -200,7 +214,7 @@
 }
   
 .sponsors {
-    background-color: yellow;
+    /* background-color: yellow; */
     display: flex;
     flex-direction: column;
     padding: 5%;
@@ -227,10 +241,6 @@
     align-items: center;
     padding: 0.5%;
     
-}
-
-li {
-    list-style-type: none;
 }
 
 .support-and-about {
