--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,52 +1,35 @@
 .container {
-    grid-template-columns: repeat(3, 1fr);
-    /* grid-row: repeat(7, 1fr); */
-    margin: auto;
     display: grid;
-    border: blue 2px dotted;
+    grid-template-rows: .5fr fr fr .75fr fr 1.5fr fr .5fr;
 }
 
 .header {
-    grid-column: 1 / 4;
-    grid-row: 1 / 2;
+    /* grid-column: 1 / 4; */
+    grid-template-rows: 1 / 2;
     background-color: aqua;
-    border-bottom: lightblue 2px solid;
-    min-width: 100px;
+    width: 100%;
     height: 4em;
 }
 
+
 nav ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 70% 15% 15%;
     list-style-type: none;
-    padding: 10px 20px 50px 20px;
+    font-weight: bold;
 }
-
-
- /* nav ul:first-child {
-    grid-column: 1/2;
-    justify-content: flex-start;
-} */
 
 
 
 .title {
-    grid-column: 1 / 4;
-    grid-row: 2 / 3;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
-    padding: 10px 20px 50px 20px;
-    border-bottom: lightblue 2px solid;
-    min-width: 100px;
-  min-height: 100px;
+    font-weight: bold;
+    border-bottom: lightblue 2px solid; 
+    padding-bottom: 40px;  
 }
 
-.title h1 {
-    padding: 10px 20px 20px 20px;
-}
 
 .title sub {
     padding: 10px 20px 50px 20px;
@@ -60,214 +43,125 @@ nav ul {
 .title a {
     border-style: outset;
     border-style: solid;
-    border-width: 1px;
-    border-radius: 4px;
+    border-width: 2px;
+    border-radius: 7px;
     text-decoration: none;
     padding: 10px;
+    color: orange;
 }
 
 .title a:hover {
     background-color: lightcoral;
-}
+    color: green;
+} 
 
 
-.quote, .second-quote {
-    grid-column: 1 / 4;
-    grid-row: 3 / 4;
+.quote {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    padding: 10px 20px 50px 20px;
+    flex-direction: column;
+    justify-content: space-around;
     font-family: 'Slabo 27px', serif;
     border-bottom: lightblue 2px solid;
-    min-width: 100px;
-    min-height: 100px;
-    display: block;
     font-style: italic;
-    background: lightgray
+    font-size: 1.4em;
+    background-color: lightgray;
 }
 
-blockquote, blockquote + p {
-    grid-column: 2 / 3;
-    width: 500px
+blockquote {
+   margin: 200px;
 }
 
 .quote-author {
-    float: right;
-} 
-
-/* .quote blockquote {
-    white-space: pre-line;
+    text-align: right;
+    padding-right: 10%; 
 }
 
-.quote p::before {
-    display: block;
-    content: '\A'; 
-    white-space: pre;
-} */
-
 .why {
-    grid-column: 1 / 4;
-    grid-row: 4 / 5;
-   border-bottom: lightblue 2px solid;
-   flex-direction: row;
-   justify-content: space-around;
+    border-bottom: lightblue 2px solid;
 }
 
 .why h2 {
     text-align: center;
+    padding: 30px
 }
 
 .why ul {
-    list-style-type: none;
+    display: flex; 
     justify-content: space-evenly;
+    list-style-type: none;
 }
 
-
-.why-first, .why-first p {
-    grid-column: 1 / 2;
-    grid-row: 4 / 5;
-    flex-direction: row;
-    width: 25vw;
-    display: inline-block;
-    background-color: lightcoral;
-    border-bottom: lightblue 2px solid;
-    min-width: 200px;
-    min-height: 100px;
-    justify-content: center;
-}
-
-
-
-.why-second, .why-second p {
-    grid-column: 2 / 3;
-    grid-row: 4 / 5;
-    flex-direction: row;
-    width: 25vw;
-    display: inline-block;
-    background-color: lightblue;
-    border-bottom: lightblue 2px solid;
-    min-width: 200px;
-    min-height: 100px;
-
-    
-}
-
-.why-third, .why-third p {
-    grid-column: 3 / 4;
-    grid-row: 4/ 5;
-    width: 25vw;
-    flex-direction: row;
-    display: inline-block;
-    background-color: lightyellow;
-    border-bottom: lightblue 2px solid;
-    min-width: 200px;
-    min-height: 100px;
-    /* border-width: 2px solid orange; */
+.why ul li {
+    width: 25%;
 }
 
 .why ul li img {
     float: left;
+    vertical-align: top;
 }
 
-.why ul li strong p {
-    float: right;
-}
-
-
-
-.second-quote {
-    grid-column: 1 / 4;
-    grid-row: 5 / 6;
-    flex-direction: row;
-    border-bottom: lightblue 2px solid;
-    min-width: 100px;
-  min-height: 100px;
-}
-
-.team {
-    grid-column: 1 / 4;
-    grid-row: 6 / 7;
-    display: inline-flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-    border-bottom: lightblue 2px solid;
-    min-width: 100px;
-  min-height: 100px;
-}
-
-.team h2 {
-    grid-column: 2 / 3;
-    justify-content: center;
-    padding: 10px 60px 20px 40px;
-    min-width: 100px;
-    min-height: 100px;
-    
+.team h2{
+    text-align: center;
 }
 
 .team ul {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    list-style-type: none;
-    min-width: 100px;
-    min-height: 100px;
+    border-bottom: lightblue 2px solid;
+    justify-content: center;
+    flex-flow: row wrap;
 }
 
 .team ul li {
-    vertical-align: top;
-    display: inline-block;
+    margin: 4%;
+    list-style-type: none;
+}
+
+
+.team-mate span {
+    display: flex;
+    flex-direction: table-column;
     text-align: center;
-    width: 120px;
-    padding: 30px 30px 30px 30px;
 }
 
-.team ul li img {
+.team-mate img {
     border-radius: 50%;
-    align-items: center;
-    padding:1px;
-    border:1px solid gray;
 }
 
-.team-name {
-    display: block;
-}
 
-.team-name + span {
-    float: center;
-}
 
 .sponsors {
-    grid-column: 1 / 4;
-    grid-row: 7/ 8;
     border-bottom: lightblue 2px solid;
     min-width: 100px;
     min-height: 100px;
 }
 
+.sponsors h2 {
+    text-align: center;
+}
+
+.sponsors ul {
+    list-style-type: none;
+    display: flex; 
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.sponsors ul li {
+    margin: 2%;
+}
+
 .support {
-    grid-column: 1 / 4;
-    grid-row: 8 / 9;
-    min-width: 100px;
-    min-height: 100px;
-    display: inline;
-    justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.support-demo {
-    width: 20%;
-    height: 100px;
-    border: 1px solid red;
-    margin-right: 10px;
+.support ul {
+    list-style-type: none;
+    margin: 0; 
+    padding: 0;
 }
 
-.about {
-    width: 20%;
-    height: 100px;
-    border: 1px solid red;
-    margin-right: 10px;
+.support div {
+    margin: 4% 10%;
+    vertical-align: top;
 }
