[Refactor] added padding to sponsor and lists

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 /* lists */
 li {
     list-style-type: none;
+    padding: 0px 10px 0px 10px;
+}
+
+ul {
+    padding-inline-start: unset;
 }
 
 /* titles */
