--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,11 @@
-/* .container {
-    display: grid;
-    /* grid-template-columns: 1fr 1fr 1fr; 
+@import url('https://fonts.googleapis.com/css?family=Source+Serif+Pro');
+@import url('https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,600,700');
+
+* {
+    font-family: 'Source Serif Pro', serif;
 }
-*/
-/* .top-nav-bar ul {
-    padding: 0;
-    margin: 16px;
-
-    display: flex;
-    list-style-type: none;
-    justify-content: flex-end;
-}
-
-.top-nav-bar ul > li {
-    /* border: 1px solid white; */
-    /* margin: 4px; */
-    /* padding: 4px; */
-    /* background-color: purple; */
-    /* align-self: center; */
-
-}
-
-/* Starterly logo */
-/* .top-nav-bar ul > li:first-child { */
-    /* background-color: tomato; */
-    /* flex-grow: 1; */
-
-    /* font-style: italic; */
-    /* font-size: 28pt; */
-    /* font-weight: bolder; */
-}
-/*  
-.title-section {
-    border: 5px solid silver;
-    background-color: orange;
-}
-
-.title-section h1 {
-    display: flex;
-    align-items: center;
-} */
-
 .container {
     display: grid;
-    /* grid-template-rows: repeat(8, 12.5%); */
     grid-template-columns: repeat(4, 1fr);
     padding: 1em;
   } 
@@ -79,7 +41,6 @@ nav li:nth-child(2), nav li:nth-child(3) {
   }
   
 .title {
-    /* background-color: lightgreen; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -96,7 +57,7 @@ nav li:nth-child(2), nav li:nth-child(3) {
 }
 
 .button {
-    background-color: rgb(226, 225, 242);
+    background-color: rgb(239, 231, 244);
     border-radius: 15px;
     color: black;
     padding: 20px;
@@ -116,9 +77,9 @@ nav li:nth-child(2), nav li:nth-child(3) {
 }
   
 #quote-one {
-    /* background-color: orange; */
     padding-right: 10%;
-    padding-left: 10%
+    padding-left: 10%;
+    font-style: italic
 }
 
 #quote-one p {
@@ -127,14 +88,21 @@ nav li:nth-child(2), nav li:nth-child(3) {
     padding-right: 3%
 }
 
+#quote-one p:before {
+    content: "--"
+}
+
 .why-company-section {
     grid-row: 4 / 5;
     grid-column: 1 / span 4;
 }
   
 .about-company {
-    /* background-color: lightblue; */
     padding: 5%
+}
+
+h2, h3 {
+    font-weight: bold;
 }
   
 .about-company h2 {
@@ -158,14 +126,19 @@ nav li:nth-child(2), nav li:nth-child(3) {
 }
   
 #quote-two {
-    /* background-color: lightpink; */
-    padding: 3%
+    padding-right: 10%;
+    padding-left: 10%;
+    font-style: italic
 }
 
 #quote-two p {
     display: flex;
     justify-content: flex-end;
-    padding-right: 3%
+    padding-right: 3%;
+}
+
+#quote-two p:before {
+    content: "--"
 }
   
 .meet-team {
@@ -174,7 +147,6 @@ nav li:nth-child(2), nav li:nth-child(3) {
 }
   
 .team {
-    /* background-color: hotpink; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -201,10 +173,8 @@ nav li:nth-child(2), nav li:nth-child(3) {
 }
 
 .team > ul img {
-    /* max-width: 100%;
-    max-height: 100%; */
     border-radius: 50%;
-    padding: 15%;
+    border: 0.5rem solid rgb(239, 231, 244);
     max-width: 100%;
 }
 
@@ -214,7 +184,6 @@ nav li:nth-child(2), nav li:nth-child(3) {
 }
   
 .sponsors {
-    /* background-color: yellow; */
     display: flex;
     flex-direction: column;
     padding: 5%;
@@ -252,24 +221,17 @@ nav li:nth-child(2), nav li:nth-child(3) {
     padding: 0px;
 }
 
-  /* .support-and-about {
-    display: flex;
-  } */
-  .support-and-about {
-    /* background-color: tomato; */
+.support-and-about {
     grid-row: 8 / 9;
     grid-column: 1 / 2;
     display: flex;
-    /* padding: 5%  */
-  }
+    background-color: rgb(239, 231, 244);
+}
 
-  .support-and-about div {
-      padding: 5%
-  }
-  
-  /* .about { */
-  /*   background-color: purple; */
-  /*   grid-row: 8; */
-  /*   grid-column: 2 / 3 */
-  /*   padding: 5% */
-  /* } 
+.support-and-about div {
+    padding: 5%
+}
+
+.support-and-about li:hover {
+    font-weight: bold;
+}
