--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,12 @@
 * {
     font-family: 'Source Serif Pro', serif;
 }
+
 .container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     padding: 1em;
-  } 
+} 
 
 li {
     list-style-type: none;
@@ -36,7 +37,6 @@ nav li:nth-child(2), nav li:nth-child(3) {
 }
 
 .title-section {
-    grid-row: 2 / 3;
     grid-column: 1 / span 4;
   }
   
@@ -72,7 +72,6 @@ nav li:nth-child(2), nav li:nth-child(3) {
 }
 
 .top-quote-block {
-    grid-row: 3 / 4;
     grid-column: 1 / span 4;
 }
   
@@ -88,12 +87,11 @@ nav li:nth-child(2), nav li:nth-child(3) {
     padding-right: 3%
 }
 
-#quote-one p:before {
+#quote-one p:before, #quote-two p:before {
     content: "--"
 }
 
 .why-company-section {
-    grid-row: 4 / 5;
     grid-column: 1 / span 4;
 }
   
@@ -121,7 +119,6 @@ h2, h3 {
 }
   
 .second-quote-block {
-    grid-row: 5 / 6;
     grid-column: 1 / span 4;
 }
   
@@ -137,12 +134,7 @@ h2, h3 {
     padding-right: 3%;
 }
 
-#quote-two p:before {
-    content: "--"
-}
-  
 .meet-team {
-    grid-row: 6 / 7;
     grid-column: 1 / span 4;
 }
   
@@ -179,7 +171,6 @@ h2, h3 {
 }
 
 .all-sponsors-section {
-    grid-row: 7 / 8;
     grid-column: 1 / span 4;
 }
   
@@ -203,29 +194,22 @@ h2, h3 {
     margin-right: 7%
 } 
 
-
 .sponsors ul li {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     padding: 0.5%;
-    
 }
 
 .support-and-about {
+    grid-column: 1 / 2;
     display: flex;
     flex-direction: row;
+    background-color: rgb(239, 231, 244);
 }
 
 .support-and-about ul {
     padding: 0px;
-}
-
-.support-and-about {
-    grid-row: 8 / 9;
-    grid-column: 1 / 2;
-    display: flex;
-    background-color: rgb(239, 231, 244);
 }
 
 .support-and-about div {
