--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,3 +33,50 @@ nav ul {
     padding: 1rem;
 }
 
+section {
+    border-top: solid lightgray;
+    /* background-image: linear-gradient(#1178af, white); */
+}
+
+section.quote-inspo {
+    font-style: italic;
+    text-align: center;
+}
+
+section.quote-inspo p {
+    text-align: right;
+    padding: 2rem;
+}
+
+section.mission ul {
+    list-style-type: none;
+    flex-wrap: wrap;
+    display: flex;
+    padding: 2em;
+    justify-content: left;
+}
+
+.mission img {
+    float: left;
+    padding: 1em;
+}
+
+.mission li {
+    margin-bottom: 1em;
+    vertical-align: middle;
+    text-align: left;
+    padding: 2em;
+    display: inline;
+}
+
+.mission {
+    display: block;
+    align-content: center;
+}
+
+div.mission-phrases {
+    block-size: 75px ;
+    font-size: .75rem;
+    display: inline-block;
+    inline-size: 75px;
+}
