--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans' rel="stylesheet");
+
 .container {
   font-family: 'Noto Sans', sans-serif;
   text-align: center;
@@ -14,18 +15,15 @@ nav ul {
   font-weight: bold;
   display: grid;
   grid-template-columns: 60% 20% 20%;
-
-  background-color: aqua
 }
 
-.first {
+.top {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: blue
 }
 
-.first a {
+.top a {
   margin: 3em;
   border: solid #9ea1a5 thin;
   border-radius: 10px;
@@ -35,88 +33,83 @@ nav ul {
   font-size: 1em;
 }
 
-.second {
+.quote {
   line-height: 2em;
   font-family: serif;
   font-style: italic;
   font-size: 25px;
   padding: 125px, 125px;
-
-  background-color: pink
 }
 
-.second p {
+.quote p {
   text-align: right;
   padding-right: 10%;
-  background-color: brown;
 }
 
-.third ul {
+.mission ul {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   text-align: left;
 }
 
-.third img {
+.mission img {
   float: left;
   margin-top: 0px;
   padding-right: 5px;
 }
 
-.fifth ul {
+.team ul {
   width: 100%;
   display: grid;
   grid-template: auto auto / repeat(7, 1fr);
-  background-color: aquamarine
 }
-.fifth ul li span {
+
+.team ul li span {
   display: block;
 }
-.fifth ul li img {
+.team ul li img {
   border-radius: 50%;
 }
 
-.fifth ul li:first-of-type {
+.team ul li:first-of-type {
   grid-column: 2;
   grid-row: 1;
 }
 
-.fifth ul li:nth-of-type(2) {
+.team ul li:nth-of-type(2) {
   grid-column: 4;
   grid-row: 1;
 }
 
-.fifth ul li:nth-of-type(3) {
+.team ul li:nth-of-type(3) {
   grid-column: 6;
   grid-row: 1;
 }
 
-.fifth ul li:nth-of-type(4) {
+.team ul li:nth-of-type(4) {
   grid-column: 3;
   grid-row: 2;
 }
 
-.fifth ul li:nth-of-type(5) {
+.team ul li:nth-of-type(5) {
   grid-column: 5;
   grid-row: 2;
 }
 
 
-.sixth ul {
+.sponsor ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  background-color: lavenderblush
 }
 
-.seventh {
+.footer {
   text-align: left;
   font-weight: bold;
   display: grid;
   grid-template-columns: 20% 20%;
-  background-color: lightslategray
 }
 
-.seventh h3 {
+.footer h3 {
   padding-left: 40px; 
 }
